--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "react-image": "^1.3.1",
     "react-images": "^0.5.17",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint src/* --fix"
+    "lint": "./node_modules/.bin/eslint src/* --fix",
+    "start:test": "jest --verbose --runInBand"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
